--- a/pom.xml
+++ b/pom.xml
@@ -4,9 +4,9 @@
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
 
-    <groupId>org.future.feign</groupId>
+    <groupId>com.inspiration.future</groupId>
     <artifactId>future-feign-springboot-starter</artifactId>
-    <version>2022.10.17-release</version>
+    <version>2022.10.25-release</version>
     <description>
         After watching the open - feign source of essays,
         Only through the HTTP client - simple injection calls to feign interface is realized,
